[package]
name = "neat-api"
version = "0.1.0"
authors = ["Rodolfo Ruiz <rpruiz@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
parking_lot = "0.11"
serde = { version = "1.0.117", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
